# src/controllers/user.controller.ts
@@ -1,5 +1,8 @@
+import {repository} from '@loopback/repository';
 import {api, operation, param, requestBody} from '@loopback/rest';
 import {User} from '../models/user.model';
+import {UserRepository} from '../repositories';
+
 
 /**
  * The controller class is generated from OpenAPI spec with operations tagged
@@ -73,25 +76,51 @@ import {User} from '../models/user.model';
   paths: {},
 })
 export class UserController {
-    constructor() {} 
+  constructor(
+    @repository(UserRepository) private userRepo: UserRepository
+  ) { }
   /**
    * This can only be done by the logged in user.
    *
    * @param _requestBody Created user object
    */
   @operation('post', '/user', {
-  tags: [
-    'user',
-  ],
-  summary: 'Create user',
-  description: 'This can only be done by the logged in user.',
-  operationId: 'createUser',
-  responses: {
-    default: {
-      description: 'successful operation',
+    tags: [
+      'user',
+    ],
+    summary: 'Create user',
+    description: 'This can only be done by the logged in user.',
+    operationId: 'createUser',
+    responses: {
+      default: {
+        description: 'successful operation',
+      },
     },
-  },
-  requestBody: {
+    requestBody: {
+      content: {
+        'application/json': {
+          schema: {
+            $ref: '#/components/schemas/User',
+          },
+          examples: {
+            'sample-user': {
+              summary: 'Example',
+              value: {
+                username: 'johndoe589',
+                firstName: 'John',
+                lastName: 'Doe',
+                email: 'bestjohn@doe.com',
+                phone: '+71002003040',
+              },
+            },
+          },
+        },
+      },
+      description: 'Created user object',
+      required: true,
+    },
+  })
+  async createUser(@requestBody({
     content: {
       'application/json': {
         schema: {
@@ -113,32 +142,27 @@ export class UserController {
     },
     description: 'Created user object',
     required: true,
-  },
-})
-  async createUser(@requestBody({
-  content: {
-    'application/json': {
-      schema: {
-        $ref: '#/components/schemas/User',
-      },
-      examples: {
-        'sample-user': {
-          summary: 'Example',
-          value: {
-            username: 'johndoe589',
-            firstName: 'John',
-            lastName: 'Doe',
-            email: 'bestjohn@doe.com',
-            phone: '+71002003040',
-          },
-        },
-      },
-    },
-  },
-  description: 'Created user object',
-  required: true,
-}) _requestBody: User): Promise<unknown> {
-     throw new Error('Not implemented'); 
+  }) user: User): Promise<any | undefined> {
+
+    const filter = {
+      where: {
+        username: user.username,
+      }
+    };
+
+    const sameName = await this.userRepo.findOne(filter)
+    if (sameName) {
+      return {
+        "statusCode": 404,
+        code: 'error',
+        message: 'Это имя пользователя уже занято'
+      }
+    }
+
+    const newUser = await this.userRepo.create(user);
+
+    console.log('User ' + user.username + ' created. ID: ' + newUser.id);
+
   }
   /**
    * Returns a user based on a single ID, if the user does not have access to the
@@ -148,57 +172,58 @@ user
    * @returns user response
    */
   @operation('get', '/user/{userId}', {
-  tags: [
-    'user',
-  ],
-  description: 'Returns a user based on a single ID, if the user does not have access to the user',
-  operationId: 'find user by id',
-  responses: {
-    '200': {
-      description: 'user response',
-      content: {
-        'application/json': {
-          schema: {
-            $ref: '#/components/schemas/User',
+    tags: [
+      'user',
+    ],
+    description: 'Returns a user based on a single ID, if the user does not have access to the user',
+    operationId: 'find user by id',
+    responses: {
+      '200': {
+        description: 'user response',
+        content: {
+          'application/json': {
+            schema: {
+              $ref: '#/components/schemas/User',
+            },
+          },
+        },
+      },
+      default: {
+        description: 'unexpected error',
+        content: {
+          'application/json': {
+            schema: {
+              $ref: '#/components/schemas/Error',
+            },
           },
         },
       },
     },
-    default: {
-      description: 'unexpected error',
-      content: {
-        'application/json': {
-          schema: {
-            $ref: '#/components/schemas/Error',
-          },
+    parameters: [
+      {
+        name: 'userId',
+        in: 'path',
+        description: 'ID of user',
+        required: true,
+        schema: {
+          type: 'integer',
+          format: 'int64',
         },
       },
-    },
-  },
-  parameters: [
-    {
-      name: 'userId',
-      in: 'path',
-      description: 'ID of user',
-      required: true,
-      schema: {
-        type: 'integer',
-        format: 'int64',
-      },
-    },
-  ],
-})
+    ],
+  })
   async findUserById(@param({
-  name: 'userId',
-  in: 'path',
-  description: 'ID of user',
-  required: true,
-  schema: {
-    type: 'integer',
-    format: 'int64',
-  },
-}) userId: number): Promise<User> {
-     throw new Error('Not implemented'); 
+    name: 'userId',
+    in: 'path',
+    description: 'ID of user',
+    required: true,
+    schema: {
+      type: 'integer',
+      format: 'int64',
+    },
+  }) userId: number): Promise<User> {
+    const user = await this.userRepo.findById(userId);
+    return user
   }
   /**
    * deletes a single user based on the ID supplied
@@ -206,50 +231,51 @@ user
    * @param userId ID of user
    */
   @operation('delete', '/user/{userId}', {
-  tags: [
-    'user',
-  ],
-  description: 'deletes a single user based on the ID supplied',
-  operationId: 'deleteUser',
-  responses: {
-    '204': {
-      description: 'user deleted',
-    },
-    default: {
-      description: 'unexpected error',
-      content: {
-        'application/json': {
-          schema: {
-            $ref: '#/components/schemas/Error',
+    tags: [
+      'user',
+    ],
+    description: 'deletes a single user based on the ID supplied',
+    operationId: 'deleteUser',
+    responses: {
+      '204': {
+        description: 'user deleted',
+      },
+      default: {
+        description: 'unexpected error',
+        content: {
+          'application/json': {
+            schema: {
+              $ref: '#/components/schemas/Error',
+            },
           },
         },
       },
     },
-  },
-  parameters: [
-    {
-      name: 'userId',
-      in: 'path',
-      description: 'ID of user',
-      required: true,
-      schema: {
-        type: 'integer',
-        format: 'int64',
+    parameters: [
+      {
+        name: 'userId',
+        in: 'path',
+        description: 'ID of user',
+        required: true,
+        schema: {
+          type: 'integer',
+          format: 'int64',
+        },
       },
-    },
-  ],
-})
+    ],
+  })
   async deleteUser(@param({
-  name: 'userId',
-  in: 'path',
-  description: 'ID of user',
-  required: true,
-  schema: {
-    type: 'integer',
-    format: 'int64',
-  },
-}) userId: number): Promise<unknown> {
-     throw new Error('Not implemented'); 
+    name: 'userId',
+    in: 'path',
+    description: 'ID of user',
+    required: true,
+    schema: {
+      type: 'integer',
+      format: 'int64',
+    },
+  }) userId: number) {
+    const user = await this.userRepo.findById(userId)
+    await this.userRepo.delete(user);
   }
   /**
    * Update user with User ID supplied
@@ -258,12 +284,69 @@ user
    * @param _requestBody
    */
   @operation('put', '/user/{userId}', {
-  tags: [
-    'user',
-  ],
-  description: 'Update user with User ID supplied',
-  operationId: 'updateUser',
-  requestBody: {
+    tags: [
+      'user',
+    ],
+    description: 'Update user with User ID supplied',
+    operationId: 'updateUser',
+    requestBody: {
+      content: {
+        'application/json': {
+          schema: {
+            $ref: '#/components/schemas/User',
+          },
+          examples: {
+            'sample-user': {
+              summary: 'Example',
+              value: {
+                firstName: 'Julie',
+                lastName: 'Doe',
+                email: 'bestjohn@doe.com',
+                phone: '+71004242424',
+              },
+            },
+          },
+        },
+      },
+    },
+    responses: {
+      '200': {
+        description: 'user updated',
+      },
+      '404': {
+        description: 'unexpected error',
+        content: {
+          'application/json': {
+            schema: {
+              $ref: '#/components/schemas/Error',
+            },
+          },
+        },
+      },
+    },
+    parameters: [
+      {
+        name: 'userId',
+        in: 'path',
+        description: 'ID of user',
+        required: true,
+        schema: {
+          type: 'integer',
+          format: 'int64',
+        },
+      },
+    ],
+  })
+  async updateUser(@param({
+    name: 'userId',
+    in: 'path',
+    description: 'ID of user',
+    required: true,
+    schema: {
+      type: 'integer',
+      format: 'int64',
+    },
+  }) userId: number, @requestBody({
     content: {
       'application/json': {
         schema: {
@@ -282,65 +365,10 @@ user
         },
       },
     },
-  },
-  responses: {
-    '200': {
-      description: 'user updated',
-    },
-    default: {
-      description: 'unexpected error',
-      content: {
-        'application/json': {
-          schema: {
-            $ref: '#/components/schemas/Error',
-          },
-        },
-      },
-    },
-  },
-  parameters: [
-    {
-      name: 'userId',
-      in: 'path',
-      description: 'ID of user',
-      required: true,
-      schema: {
-        type: 'integer',
-        format: 'int64',
-      },
-    },
-  ],
-})
-  async updateUser(@param({
-  name: 'userId',
-  in: 'path',
-  description: 'ID of user',
-  required: true,
-  schema: {
-    type: 'integer',
-    format: 'int64',
-  },
-}) userId: number, @requestBody({
-  content: {
-    'application/json': {
-      schema: {
-        $ref: '#/components/schemas/User',
-      },
-      examples: {
-        'sample-user': {
-          summary: 'Example',
-          value: {
-            firstName: 'Julie',
-            lastName: 'Doe',
-            email: 'bestjohn@doe.com',
-            phone: '+71004242424',
-          },
-        },
-      },
-    },
-  },
-}) _requestBody: User): Promise<unknown> {
-     throw new Error('Not implemented'); 
+  }) newData: User) {
+
+    await this.userRepo.updateById(userId, newData);
+
   }
 }
 
